[gd_scene load_steps=15 format=3 uid="uid://dyb3usbe1j0q5"]

[ext_resource type="Script" uid="uid://bcpjxvu86sh0h" path="res://scripts/journey.gd" id="1_k32ch"]
[ext_resource type="PackedScene" uid="uid://d1an7vgpqxga5" path="res://scene/level1.tscn" id="2_uyjn8"]
[ext_resource type="PackedScene" uid="uid://b6lbvtb5noi4o" path="res://scene/level2.tscn" id="3_4x55i"]
[ext_resource type="PackedScene" uid="uid://cgffkeivpatu2" path="res://scene/level3.tscn" id="4_uc341"]
[ext_resource type="PackedScene" uid="uid://qyc3ssnoemtn" path="res://scene/level4.tscn" id="5_wkmgh"]
[ext_resource type="PackedScene" uid="uid://debvso3hb33tj" path="res://scene/tutorial.tscn" id="6_dwjk3"]
[ext_resource type="PackedScene" uid="uid://bsx12p356iv2s" path="res://scene/random_level.tscn" id="7_grcfq"]
[ext_resource type="PackedScene" uid="uid://da8b1ftrdat3y" path="res://scene/random_level2.tscn" id="8_2wvny"]

[sub_resource type="Curve2D" id="Curve2D_epgyv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 533, -73, 0, 0, 0, 0, 793, -69)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_hegci"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -54, 365, 0, 0, 0, 0, -30, 196, 0, 0, 0, 0, -17, 39)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_h8sj1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1363, 193, 0, 0, 0, 0, 1389, 384)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_won01"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -249, -220, 0, 0, 0, 0, 1523, -240, 0, 0, 0, 0, 1539, 940, 0, 0, 0, 0, -241, 978, 0, 0, 0, 0, -249, -220)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_mqdaa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -298, -275, 0, 0, 0, 0, 1669, -331, 0, 0, 0, 0, 1651, 1057, 0, 0, 0, 0, -298, 1062, 0, 0, 0, 0, -298, -275)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_mo30s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 276, 192, 0, 0, 0, 0, 1003, 174, 0, 0, 0, 0, 1003, 532, 0, 0, 0, 0, 283, 532, 0, 0, 0, 0, 276, 192)
}
point_count = 5

[node name="journey" type="Node2D"]
script = ExtResource("1_k32ch")

[node name="up" type="Path2D" parent="."]
curve = SubResource("Curve2D_epgyv")

[node name="left" type="Path2D" parent="."]
curve = SubResource("Curve2D_hegci")

[node name="right" type="Path2D" parent="."]
curve = SubResource("Curve2D_h8sj1")

[node name="asteroid_spawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_won01")

[node name="comet_spawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_mqdaa")

[node name="test" type="Path2D" parent="."]
curve = SubResource("Curve2D_mo30s")

[node name="level1" parent="." instance=ExtResource("2_uyjn8")]

[node name="level2" parent="." instance=ExtResource("3_4x55i")]

[node name="level3" parent="." instance=ExtResource("4_uc341")]

[node name="level4" parent="." instance=ExtResource("5_wkmgh")]

[node name="tutorial" parent="." instance=ExtResource("6_dwjk3")]

[node name="random_level" parent="." instance=ExtResource("7_grcfq")]

[node name="random_level2" parent="." instance=ExtResource("8_2wvny")]
